# esp32-config

./: .gitignore  CMakeLists.txt  Kconfig  README.md  app_config.c  app_config_http.c  app_config_mqtt.c  app_config_mqtt_binary_sensor.c  app_config_mqtt_light.c  app_config_mqtt_switch.c  app_config_ota.c  app_config_wifi.c  codeREADME.md  config_default.css  config_defs.h  generate_ble_mesh.py  generate_config.py  generate_html.py
include/: app_config.h  app_config_ble_mesh.h  app_config_http.h  app_config_mqtt.h  app_config_mqtt_binary_sensor.h  app_config_mqtt_light.h  app_config_mqtt_switch.h  app_config_ota.h  app_config_wifi.h
